fixes icon size

--- a/src/scss/apex-fontawesome5.scss
+++ b/src/scss/apex-fontawesome5.scss
@@ -19,13 +19,65 @@
 	.far {
 		font-weight: 400;
 	}
-	
+
 	.fas {
 		font-weight: 900;
 	}
-	
+
 	.t-Button.t-Button--header .t-Icon {
-	  font-size: 1.4rem; 
+		font-size: 1.4rem;
+	}
+
+	.fa-lg {
+		font-size: 1.33333em;
+	}
+
+	.fa-xs {
+		font-size: 0.75em;
+	}
+
+	.fa-sm {
+		font-size: 0.875em;
+	}
+
+	.fa-1x {
+		font-size: 1em;
+	}
+
+	.fa-2x {
+		font-size: 2em;
+	}
+
+	.fa-3x {
+		font-size: 3em;
+	}
+
+	.fa-4x {
+		font-size: 4em;
+	}
+
+	.fa-5x {
+		font-size: 5em;
+	}
+
+	.fa-6x {
+		font-size: 6em;
+	}
+
+	.fa-7x {
+		font-size: 7em;
+	}
+
+	.fa-8x {
+		font-size: 8em;
+	}
+
+	.fa-9x {
+		font-size: 9em;
+	}
+
+	.fa-10x {
+		font-size: 10em;
 	}
 }
 
